@@ -1,6 +1,7 @@
 dnl Process this file with autoconf to produce a configure script.
 AC_INIT(src/bbkeys.cc)
-AM_INIT_AUTOMAKE(bbkeys, 0.8.3)
+AM_INIT_AUTOMAKE(bbkeys, 0.8.4)
+AM_MAINTAINER_MODE
 AC_PREFIX_DEFAULT(/usr/local)
 
 AC_CHECK_PROGS(regex_cmd, sed)
