@@ -2,6 +2,11 @@ version 0.8.4 --
   - cleaning up build again.  Rather than having 200 -DDEFINE_ statements
     in our compile lines, we use config.h (like normal people).  =:)  This
     very well may break stuff, but it looks good thus far....
+  - adding AM_MAINTAINER_MODE to stop the ever-annoying "here, let me run
+    aclocal for you again!!" idiocy of automake and friends
+  - trying to fix things for multi-head displays--replacing
+    "getScreenInfo(0)->getRootWindow()," with
+    "getCurrentScreenInfo()->getRootWindow(),"
 
 version 0.8.3 --
   - changing external app launch order--we go bbconf, bbkeysconf,
